# hex-uuid

./: README.md  pyproject.toml
hex_uuid_tool/: main.py
hex_uuid_tool/icons/: app_icon.icns  generate_icon.py
vibe_hex/: main.py
