[tool.poetry]
name = "hex-uuid-tool"
version = "0.1.0"
description = "A UUID format converter utility with GUI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hex_uuid_tool"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hex = "hex_uuid_tool.main:main"
